Add final version of service

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-DB_USER=user
-DB_PASSWORD=password
+POSTGRES_USER=app
+POSTGRES_PASSWORD=app
+POSTGRES_DB=pr_service
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+DSN=postgres://app:app@db:5432/pr_service?sslmode=disable
